# pullr

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: exec.rs  lib.rs  repo.rs
src/cli/: mod.rs
tests/: cli.rs
