[package]
name = "pullr"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A single command to merge pull requests"
repository = "https://github.com/LEI/pullr"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.10"

[lib]
doctest = false
